--- a/clash-all-fallback-smart.yaml
+++ b/clash-all-fallback-smart.yaml
@@ -498,7 +498,7 @@ rule-providers:
   Nintend / Domain: {<<: *class, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list"}
   Google / Domain: {<<: *domain, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/google.mrs"}
   Google / IP: {<<: *ip, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/google.mrs"}
-  GYEmby / Domain: {<<: *class, url: "https://raw.githubusercontent.com/am26980/openclash/refs/heads/main/Emby.list"}
+  GYEmby / Domain: {<<: *class, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/am26980/openclash/refs/heads/main/Emby.list"}
   ZDY / Domain: {<<: *class, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/am26980/openclash/refs/heads/main/zdy.list"}
   Proxy / Domain: {<<: *class, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Proxy.list"}
   Globe / Domain: {<<: *class, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list"} 
